--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "node-js",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
   "main": "script.js",
   "scripts": {
+    "dev": "nodemon script.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "index.js": "^0.0.3",
-    "mysql": "github:mysqljs/mysql",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "description": ""
 }
