--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "script.js",
   "scripts": {
     "dev": "nodemon script.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
